--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -9,6 +9,8 @@
     "esModuleInterop": true,                // Interoperability between CommonJS and ES Modules
     "forceConsistentCasingInFileNames": true, // Enforce consistent casing in import paths
     "skipLibCheck": true,                    // Skip type checking of declaration files
+    "experimentalDecorators": true,           // Enable decorators
+    "emitDecoratorMetadata": true,
     "paths": {
       "@org/shared": [
         "../shared/src/*",                    // For development, points to source files
